# crichton

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
client/: cert.pem  key.pem  package.json
client/public/: index.html  style.css
client/src/: App.css  App.tsx  index.css  index.tsx
client/src/api/: APIHelper.js  APIList.js
client/src/pages/: MainPage.tsx  Page.scss
client/src/util/: AES.js  Constants.tsx  TypeDef.tsx
doc/: README.md
engines/CrichtonDefectInjector/: CrichtonDefectSimulator.sln
engines/CrichtonDefectInjector/DefectInjector/: DefectInjector.fsproj  Program.fs
engines/CrichtonDefectInjector/InjectionTester/: InjectionTester.fsproj  Program.fs
engines/CrichtonDefectInjector/SpecLib/: SpecLib.fs  SpecLib.fsproj
engines/clang-plugin/: CMakeLists.txt  CrichtonAction.cpp  CrichtonAction.h  CrichtonConsumer.cpp  CrichtonConsumer.h  CrichtonItems.cpp  CrichtonItems.h  README.md
engines/external-tool/coyote/: README.md  plugin.properties
engines/inj-tester/: Program.fs  inj-tester.fsproj
engines/injector/: .gitignore  injector.sln
engines/injector/injector/: PatchApplier.fs  Program.fs  (+1 more)
external-tool/: README.md
external-tool/coyote/: coyote-make-binary.sh  coyote-run.sh
plugins/: build.gradle  settings.gradle
plugins/coyote/: build.gradle
plugins/injector/: build.gradle
plugins/runner/: build.gradle
proto/: fun.proto
server/: build.gradle
tests/c++-samples/: no_implementation.cpp  null.cpp  vector_map.cpp  vector_map2.cpp
tests/c-samples/: array.c  demo.c  strcmp.c  strncmp.c
(+291 files in other folders)
